# rura

./: .gitignore  Cargo.toml  README.md
.github/: README.md
.github/workflows/: build.yaml  miri.yaml
docs/: closures.md  exclusivity.md  lowering.md  ownership.md  types.md
rura-codegen/: Cargo.toml
rura-codegen/src/: lib.rs  lir.rs  parser.rs  pprint.rs
rura-codegen/src/lir/: mod.rs  parser.rs
rura-codegen/src/pass/: diagnostic.rs  mod.rs
rura-core/: Cargo.toml
rura-core/src/: lib.rs  shape.rs  types.rs
rura-core/src/ast/: mod.rs
rura-core/src/lir/: ir.rs  mod.rs  types.rs
rura-grammar/: Cargo.toml
rura-grammar/src/: lib.rs
rura-grammar/src/tests/: mod.rs
rura-internal-macros/: Cargo.toml
rura-internal-macros/src/: lib.rs
rura-lir/: Cargo.toml
rura-lir/src/: lib.rs  lir.rs  parser.rs  pprint.rs  shape.rs  types.rs
rura-lir/src/pass/: diagnostic.rs  mod.rs  visitor.rs
rura-lir/src/pass/analysis/: free_variable.rs  mod.rs  type_inference.rs
rura-lir/src/pass/diagnostic/: improper_termination.rs  mod.rs  undefined_variable.rs  variable_definition.rs
rura-opt/: Cargo.toml
rura-opt/src/: main.rs
rura-parsing/: Cargo.toml
rura-parsing/src/: lib.rs
rura-parsing/src/tests/: mod.rs
rura-runtime/: Cargo.toml
rura-runtime/src/: closure.rs  hole.rs  lib.rs  unique.rs
rura-typing/: Cargo.toml
rura-typings/: Cargo.toml
rura-typings/src/: lib.rs
src/: lib.rs
