[package]
name = "rura-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
rura-core = { path = "../rura-core" }
unicode-ident = "1.0.12"
winnow = { version = "0.6.1" }

[features]
winnow-simd = ["winnow/simd"]

[dev-dependencies]
prettyplease = "0.2.16"
syn = "2.0.48"
