[package]
name = "rura-codegen"
version = "0.1.0"
edition = "2021"

[features]
winnow-simd = ["winnow/simd"]
winnow-debug = ["winnow/debug"]

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
winnow = "0.6.2"

[dependencies.rura-core]
path = "../rura-core"

[dependencies.rura-parsing]
path = "../rura-parsing"

[dev-dependencies]
prettyplease = "0.2.16"
syn = "2.0.50"
