[package]
name = "rura-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
syn = { version = "2.0.48", features = [
  "full",
  "extra-traits",
  "fold",
  "visit",
  "visit-mut",
] }
thiserror = "1.0.56"
