[package]
name = "rura-core"
version = "0.1.0"
edition = "2021"

[dependencies]
winnow = "0.6.2"
proc-macro2 = "1.0.78"
quote = "1.0.35"
lexpr = "0.2.7"
serde-lexpr = "0.1.3"
thiserror = "1.0.57"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dev-dependencies]
prettyplease = "0.2.16"
syn = "2.0.51"
