[package]
name = "rura-internal-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"

[dev-dependencies]
prettyplease = "0.2.16"
syn = { version = "2.0.48", features = ["full"] }
