[package]
name = "rura-lir"
version = "0.1.0"
edition = "2021"

[features]
winnow-simd = ["winnow/simd"]
winnow-debug = ["winnow/debug"]
colorful-diagnostic = ["dep:nu-ansi-term"]

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
winnow = "0.6.2"
thiserror = "1.0.57"
serde_json = "1.0.114"
nu-ansi-term = { version = "0.50.0", optional = true }

[dependencies.rura-parsing]
path = "../rura-parsing"

[dev-dependencies]
prettyplease = "0.2.16"
syn = "2.0.50"
