[package]
name = "rura-lir"
version = "0.1.0"
edition = "2021"

[features]
winnow-simd = ["winnow/simd"]
winnow-debug = ["winnow/debug"]
colorful-diagnostic = ["dep:nu-ansi-term"]

[dependencies]
winnow = "0.6.2"
thiserror = "1.0.57"

[dependencies.nu-ansi-term]
version = "0.50.0"
optional = true

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.serde-lexpr]
version = "0.1.3"

[dependencies.rura-core]
path = "../rura-core"

[dependencies.rura-parsing]
path = "../rura-parsing"
