[package]
name = "rura-opt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
rura-lir = { path = "../rura-lir", features = ["colorful-diagnostic"] }
rura-core = { path = "../rura-core" }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
winnow = "0.6.2"
